Add route times for stop id
